<?xml version="1.0" encoding="utf-8"?>
<resources>

  <!-- Application Name -->
  <string name="AppName">PhraseCraze</string>

  <!-- Intent Designations -->
  <string name="IntentTitle">com.siramix.phrasecraze.intent.action.TITLE</string>
  <string name="IntentSettings">com.siramix.phrasecraze.intent.action.SETTINGS</string>
  <string name="IntentRules">com.siramix.phrasecraze.intent.action.RULES</string>
  <string name="IntentBuzzer">com.siramix.phrasecraze.intent.action.BUZZER</string>
  <string name="IntentAboutUs">com.siramix.phrasecraze.intent.action.ABOUTUS</string>
  <string name="IntentGameSetup">com.siramix.phrasecraze.intent.action.GAMESETUP</string>
  <string name="IntentTurn">com.siramix.phrasecraze.intent.action.TURN</string>
  <string name="IntentTurnSummary">com.siramix.phrasecraze.intent.action.TURNSUMMARY</string>
  <string name="IntentEndGame">com.siramix.phrasecraze.intent.action.GAMEEND</string>
  <string name="IntentCardReview">com.siramix.phrasecraze.intent.action.CARDREVIEW</string>
  <string name="IntentEditTeamName">com.siramix.phrasecraze.intent.action.EDITTEAMNAME</string>
  <string name="IntentAssignPoints">com.siramix.phrasecraze.intent.action.ASSIGNPOINTS</string>
  <string name="IntentPackPurchase">com.siramix.phrasecraze.intent.action.PHRASEPACKPURCHASE</string>
  <string name="IntentSetBuzzedTeam">com.siramix.phrasecraze.intent.action.SETBUZZEDTEAM</string>
  <string name="IntentCancellable">com.siramix.phrasecraze.intent.action.ISDIALOGCANCELLABLE</string>
  <string name="IntentPackInfo">com.siramix.phrasecraze.intent.action.PACKINFO</string>

  <!-- Global Prefkey IDs -->
  <string name="PREFKEY_SHOWREMINDER">com.siramix.phrasecraze.prefkey.SHOWREMINDER</string>
  <string name="PREFKEY_PLAYCOUNT">com.siramix.phrasecraze.prefkey.PREFKEY_PLAYCOUNT</string>
  <string name="PREFKEY_SCORELIMIT">com.siramix.phrasecraze.prefkey.SCORELIMIT</string>
  <string name="PREFKEY_AUTOSCORINGENABLED">com.siramix.phrasecraze.prefkey.AUTOSCORING</string>
	<!-- other prefkeys exist in Consts that needed to be retrieved from Deck -->

  <!-- Menu Designations -->
  <string name="menu_EndGame">MENU_ENDGAME</string>
  <string name="menu_Rules">MENU_RULES</string>
  <string name="menu_EndRound">MENU_ENDROUND</string>
  <string name="menu_ChangeScores">MENU_CHANGESCORES</string>

  <!-- Team names -->
  <string name="teamnameA">Blue</string>
  <string name="teamnameB">Green</string>
  <string name="teamnameC">Red</string>
  <string name="teamnameD">Yellow</string>

  <!-- Bundle Keys -->
  <string name="cardBundleKey">com.siramix.phrasecraze.card</string>
  <string name="packBundleKey">com.siramix.phrasecraze.pack</string>
  <string name="cardIndexBundleKey">com.siramix.phrasecraze.cardIndex</string>
  <string name="cardStateBundleKey">com.siramix.phrasecraze.cardState</string>
  <string name="scrollXBundleKey">com.siramix.phrasecraze.scrollY</string>
  <string name="scrollYBundleKey">com.siramix.phrasecraze.scrollY</string>
  <string name="teamBundleKey">com.siramix.phrasecraze.team</string>
  <string name="teamNameBundleKey">com.siramix.phrasecraze.teamName</string>
  <string name="assignedPointsBundleKey">com.siramix.phrasecraze.assignedPoints</string>
  <string name="buzzedTeamBundleKey">com.siramix.phrasecraze.newBuzzedTeam</string>
  <string name="packInfoIsPackSelectedBundleKey">com.siramix.phrasecraze.isPackSelected</string>
  <string name="packInfoIsPackRowOddBundleKey">com.siramix.phrasecraze.isPackRowOdd</string>
  <string name="packInfoIsPackPurchased">com.siramix.phrasecraze.isPackPurchased</string>
  
  <!-- Pack Purchasing dialog strings -->
  <string name="packpurchase_title">Phrase Packs</string>
  <string name="packpurchase_unlockedheader">Your Packs</string>
  <string name="packpurchase_lockedheader">Purchasable Packs</string>
  <string name="packpurchase_button">Confirm</string>
  <string name="packpurchase_restoring_packs">Restoring your purchases&#8230;</string>
  
  <!-- Game Setup dialog strings -->  
  <string name="gamesetup_title">Game Setup</string>
  <string name="gamesetup_teams">Teams</string>
  <string name="gamesetup_teamshint">Teams shows the colors and names of the participating teams. Tap a team\'s row to add and remove it.</string>
  <string name="gamesetup_endgamerule">Score To Win</string>
  <string name="gamesetup_endgamerulehint">Score Limit is the number of points required to win. Press the + and - buttons to change the value.</string>
  <string name="gamesetup_scoringmode">Scoring Mode</string>
  <string name="gamesetup_scoringmode_freeplay">Free Play</string>
  <string name="gamesetup_scoringmode_assisted">Assisted</string>
  <string name="gamesetup_scoringmodehint">Scoring Mode is how points are assigned. In Free Play you are in charge of assigning points. In Assisted the computer tries to help with scoring.</string>
  <string name="gamesetup_button_startgame">PLAY!</string>
  
  <!-- Turn Summary dialog strings -->
  <string name="turnsummary_stoppedon">Stopped On:</string>
  <string name="turnsummary_nextbutton">Next Round</string>
  <string name="turnsummary_results">Game Results</string>
  <string name="turnsummary_setstoppedteambutton">Switch Stopped Team</string>
  <string name="turnsummary_scoreheader">Total Scores</string>
  <string name="turnsummary_scorelimit">Score to Win: %dpts</string>
    
  <!-- Set Scores dialog strings -->
  <string name="assignpoints_title">Total Scores</string>
  <string name="assignpoints_buttoncancel">Cancel</string>
  <string name="assignpoints_buttonconfirm">Confirm</string>
  
    <!-- Set BuzzedTeam dialog strings -->
  <string name="setbuzzedteam_title">Which Team Lost the Round?</string>
  <string name="setbuzzedteam_buttoncancel">Cancel</string>
  <string name="setbuzzedteam_buttonconfirm">Confirm</string>

  <!-- For EditTeamName dialog -->
  <string name="editTeamName_hint">Choose a new name for %s team.</string>

  <!-- For end game dialog -->
  <string name="endGameDialog_title">Confirm End Game</string>
  <string name="endGameDialog_text">Are you sure you want to end the current game?</string>

  <!--  For end round dialog -->
  <string name="endRoundDialog_text">Are you sure you want to end the current round?</string>

  <!-- For pause game dialog -->
  <string name="pauseGameDialog_title">Game Paused</string>
  <string name="pauseGameDialog_text">Paused</string>

  <!--  Install dialogs -->
  <string name="progressDialog_install_text">Installing Phrases&#8230;</string>
  <string name="progressDialog_uninstall_text">Syncing Phrases with market&#8230;</string>
  <string name="progressDialog_update_text">Updating Phrases&#8230;</string>
  
  <!-- Rate Us dialogs -->
  <string name="rateUsFirstDialog_title">We want your feedback!</string>
  <string name="rateUsFirstDialog_text">It looks like you\'ve played a few games.  
     Would you mind taking a minute to provide some feedback?</string>
  <string name="rateUsSecondDialog_title">We still want your feedback!</string>
  <string name="rateUsSecondDialog_text">Wow you\'ve played a LOT, which means your opinion is especially valuable to us!
     We won\'t bug you again but would you mind providing some feedback?</string>
  <string name="rateUsDialog_positiveBtn">Rate</string>
  <string name="rateUsDialog_neutralBtn">Later</string>
  <string name="rateUsDialog_negativeBtn">Never</string>
  
	<!--  Pack Purchasing text -->
	<string name="toast_packpurchase_notwitter">Sorry, we could not detect any Twitter clients.</string>
	<string name="toast_packpurchase_nofacebook">Sorry, we could not detect any Facebook clients.</string>
	<string name="toast_packpurchase_nogoogleplus">Sorry, we could not detect any Google+ clients.</string>
  <string name="toast_packpurchase_nointerneterror">No internet connection detected.  We can only show your purchased packs.</string>
  <string name="toast_packpurchase_siramixdownerror">Sorry, there were problems connecting to our store.  We can only show your purchased packs.</string>
  <string name="toast_packpurchase_nopackselected">Please select at least one pack to play.</string>
  
  <!--  Pack Info dialog -->
  <string name="packInfo_confirm_nobuy">OK</string>
  <string name="packInfo_confirm_buy">Buy</string>
  <string name="packInfo_cancel">Cancel</string>
  <string name="packInfo_alreadyOwned">You already have this pack!</string>
  
  <!--  Rate Us URI for app store -->
  <string name="rateUs_URI">http://www.siramix.com/phrasecrazeappstore</string>

</resources>
