<?xml version="1.0" encoding="utf-8"?>

<!-- 
/*****************************************************************************
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ****************************************************************************/
 -->
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/bg_generic" android:focusable="false" android:orientation="vertical">
    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/GameSetup_Title" android:gravity="right" android:textSize="38dp" android:text="@string/gamesetup_title" android:layout_marginRight="5dp" android:layout_marginTop="-10dp" android:textColor="@color/title"></TextView>
    <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_marginTop="-10dp" android:layout_height="fill_parent" android:layout_weight="1">
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
            <RelativeLayout android:layout_height="wrap_content" android:id="@+id/GameSetup_TeamHeader" android:layout_width="wrap_content">
                <View android:id="@+id/GameSetup_TeamHeaderBar" android:background="@color/genericBG_trim" android:layout_width="fill_parent" android:layout_height="4dp" android:layout_centerHorizontal="true" android:layout_centerVertical="true"></View>
                <TextView android:layout_marginLeft="10dp" android:id="@+id/GameSetup_TeamsTitle" android:gravity="center" android:textSize="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gamesetup_teams" android:layout_centerVertical="true" android:textColor="@color/headertitle"></TextView>
                <Button android:layout_height="wrap_content" android:id="@+id/GameSetup_Teams_HelpButton" android:background="@drawable/button_info" android:layout_width="wrap_content" android:layout_alignRight="@id/GameSetup_TeamHeaderBar" android:layout_marginRight="5dp" android:layout_centerVertical="true"></Button>
            </RelativeLayout>
            <LinearLayout android:layout_height="180dp" android:id="@+id/GameSetup_TeamLayout" android:layout_width="fill_parent" android:orientation="vertical">
                <com.siramix.phrasecraze.TeamSelectLayout android:layout_height="fill_parent" android:id="@+id/GameSetup_TeamALayout" android:layout_width="fill_parent" android:layout_weight="1"></com.siramix.phrasecraze.TeamSelectLayout>
                <com.siramix.phrasecraze.TeamSelectLayout android:layout_height="fill_parent" android:id="@+id/GameSetup_TeamBLayout" android:layout_width="fill_parent" android:layout_weight="1" android:layout_marginTop="-1dp"></com.siramix.phrasecraze.TeamSelectLayout>
                <com.siramix.phrasecraze.TeamSelectLayout android:layout_height="fill_parent" android:id="@+id/GameSetup_TeamCLayout" android:layout_width="fill_parent" android:layout_weight="1" android:layout_marginTop="-1dp"></com.siramix.phrasecraze.TeamSelectLayout>
                <com.siramix.phrasecraze.TeamSelectLayout android:layout_height="fill_parent" android:id="@+id/GameSetup_TeamDLayout" android:layout_width="fill_parent" android:layout_weight="1" android:layout_marginTop="-1dp"></com.siramix.phrasecraze.TeamSelectLayout>
            </LinearLayout>
            <TextView android:layout_height="wrap_content" android:width="300dp" android:textColor="@color/white" android:layout_width="wrap_content" android:id="@+id/GameSetup_HelpText_Team" android:gravity="center" android:textSize="18dp" android:text="@string/gamesetup_teamshint" android:layout_gravity="center" android:visibility="gone"></TextView>
            <RelativeLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/GameSetup_Header_ScoreLimit" android:layout_marginTop="2dp">
                <View android:background="@color/genericBG_trim" android:layout_width="fill_parent" android:layout_height="4dp" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:id="@+id/GameSetup_Header_ScoreLimit_Bar"></View>
                <TextView android:layout_marginLeft="10dp" android:gravity="center" android:textSize="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gamesetup_endgamerule" android:layout_centerVertical="true" android:id="@+id/GameSetup_Header_ScoreLimit_Title" android:textColor="@color/headertitle"></TextView>
                <Button android:id="@+id/GameSetup_Header_ScoreLimit_HelpButton" android:layout_centerVertical="true" android:background="@drawable/button_info" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginRight="5dp" android:layout_alignRight="@id/GameSetup_Header_ScoreLimit_Bar"></Button>
            </RelativeLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_gravity="center" android:layout_width="wrap_content" android:id="@+id/GameSetup_ScoreLimit_ScoreGroup" android:layout_marginTop="-5dp">
                <Button android:id="@+id/GameSetup_ScoreLimit_ButtonMinus" android:background="@drawable/button_minus" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:soundEffectsEnabled="false"></Button>
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/GameSetup_ScoreLimit_Value" android:layout_gravity="center" android:text="0" android:paddingBottom="5dp" android:width="70dp" android:gravity="center" android:textSize="48dp"></TextView>
                <Button android:id="@+id/GameSetup_ScoreLimit_ButtonPlus" android:background="@drawable/button_plus" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:soundEffectsEnabled="false"></Button>
            </LinearLayout>
            <TextView android:layout_height="wrap_content" android:width="300dp" android:textColor="@color/white" android:layout_width="wrap_content" android:id="@+id/GameSetup_HelpText_Turn" android:gravity="center" android:layout_gravity="center" android:textSize="18dp" android:text="@string/gamesetup_endgamerulehint" android:visibility="gone"></TextView>
            <RelativeLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/GameSetup_Header_ScoringMode" android:layout_marginTop="-5dp">
                <View android:background="@color/genericBG_trim" android:layout_width="fill_parent" android:layout_height="4dp" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:id="@+id/GameSetup_Header_ScoringMode_Bar"></View>
                <TextView android:layout_marginLeft="10dp" android:gravity="center" android:textSize="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:id="@+id/GameSetup_Header_ScoringMode_Title" android:text="@string/gamesetup_scoringmode" android:textColor="@color/headertitle"></TextView>
                <Button android:id="@+id/GameSetup_Header_ScoringMode_HelpButton" android:layout_centerVertical="true" android:background="@drawable/button_info" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignRight="@id/GameSetup_Header_ScoringMode_Bar" android:layout_marginRight="5dp"></Button>
            </RelativeLayout>
            <RadioGroup android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/GameSetup_ScoringMode_Radios" android:orientation="horizontal" android:layout_marginTop="-5dp">
                <RadioButton android:gravity="center" android:id="@+id/GameSetup_ScoringMode_FreePlay" android:layout_height="wrap_content" android:layout_width="130dp" android:layout_weight="1" android:checked="true" android:text="@string/gamesetup_scoringmode_freeplay"></RadioButton>
                <RadioButton android:gravity="center" android:id="@+id/GameSetup_ScoringMode_Assisted" android:layout_height="wrap_content" android:layout_width="130dp" android:layout_weight="1" android:text="@string/gamesetup_scoringmode_assisted"></RadioButton>
            </RadioGroup>
            <TextView android:layout_height="wrap_content" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/GameSetup_HelpText_ScoringMode" android:gravity="center" android:layout_gravity="center" android:textSize="18dp" android:text="@string/gamesetup_scoringmodehint" android:visibility="gone"></TextView>
        </LinearLayout>
    </ScrollView>

	<!-- Team selection box -->
	
	<!--  Helper caption for Team selection -->

	<!-- Select number of turns -->
	
	<com.siramix.phrasecraze.AntonButton android:id="@+id/GameSetup_StartGameButton"
		android:text="@string/gamesetup_button_startgame" android:layout_width="fill_parent" style="@style/PhraseCrazeButton" android:layout_height="50dp" android:textSize="22dp" android:soundEffectsEnabled="false"></com.siramix.phrasecraze.AntonButton>

</LinearLayout>
