<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
	<RelativeLayout android:id="@+id/AssignPoints_Header"
		android:layout_height="wrap_content" android:layout_width="wrap_content">
		<View android:layout_centerVertical="true" android:id="@+id/AssignPoints_TitleBar"
			android:layout_height="4dp" android:layout_width="fill_parent"
			android:layout_centerHorizontal="true" android:background="@color/genericBG_trim"></View>
		<TextView android:layout_marginLeft="10dp" android:gravity="center"
			android:textSize="24dp" android:layout_centerVertical="true"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/AssignPoints_Title" android:textColor="@color/white" android:text="@string/assignpoints_title"></TextView>
	</RelativeLayout>
	<LinearLayout android:layout_height="wrap_content" android:id="@+id/AssignPoints_TeamLayout" android:layout_width="fill_parent">
		<LinearLayout android:layout_height="fill_parent" android:id="@+id/AssignPoints_Team1_Group" android:layout_weight="1" android:orientation="vertical" android:layout_width="fill_parent">
			<TextView android:layout_width="fill_parent" android:id="@+id/AssignPoints_Team1_Name" android:text="Blue Team" android:layout_marginRight="1dp" android:layout_marginTop="1dp" android:layout_height="30dp" android:ellipsize="end" android:scrollHorizontally="true" android:textSize="24dp" android:textColor="@color/teamA_primary" android:includeFontPadding="false" android:layout_marginBottom="2dp" android:gravity="center" android:background="@color/teamA_complement"></TextView>
			<LinearLayout android:layout_height="fill_parent" android:id="@+id/AssignPoints_Team1_ScoreLayout" android:layout_marginRight="1dp" android:layout_width="fill_parent" android:background="@color/teamA_primary" android:layout_weight="1" android:orientation="horizontal" android:padding="10dp">
			  <Button android:layout_gravity="center" android:id="@+id/AssignPoints_Team1_ButtonSubtract" android:background="@drawable/button_minus" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>  
				<TextView android:layout_height="wrap_content" android:includeFontPadding="false" android:textColor="@color/white" android:layout_width="fill_parent" android:id="@+id/AssignPoints_Team1_Score" android:gravity="center" android:textSize="48dp" android:paddingBottom="4dp" android:layout_weight="1" android:text="-13"></TextView>
				<Button android:layout_gravity="center" android:id="@+id/AssignPoints_Team1_ButtonAdd" android:background="@drawable/button_plus" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:layout_height="fill_parent" android:orientation="vertical" android:id="@+id/AssignPoints_Team2_Group" android:layout_weight="1" android:layout_width="fill_parent">
			<TextView android:layout_height="30dp" android:layout_width="fill_parent" android:layout_marginLeft="1dp" android:layout_marginTop="1dp" android:id="@+id/AssignPoints_Team2_Name" android:text="Red Team" android:scrollHorizontally="true" android:ellipsize="end" android:textSize="24dp" android:textColor="@color/teamC_primary" android:includeFontPadding="false" android:layout_marginBottom="2dp" android:gravity="center" android:background="@color/teamC_complement"></TextView>
			<LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:background="@color/teamC_primary" android:layout_marginLeft="1dp" android:id="@+id/AssignPoints_Team2_ScoreLayout" android:orientation="horizontal" android:padding="10dp">
        <Button android:layout_gravity="center" android:id="@+id/AssignPoints_Team2_ButtonSubtract"  android:background="@drawable/button_minus" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>			    				
				<TextView android:layout_height="wrap_content" android:includeFontPadding="false" android:textColor="@color/white" android:layout_width="fill_parent" android:id="@+id/AssignPoints_Team2_Score" android:gravity="center" android:textSize="48dp" android:text="0" android:paddingBottom="4dp" android:layout_weight="1" android:layout_gravity="center"></TextView>
				<Button android:layout_gravity="center" android:id="@+id/AssignPoints_Team2_ButtonAdd" android:background="@drawable/button_plus" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/AssignPoints_Buttons">
		<com.siramix.phrasecraze.AntonButton android:layout_weight="1" android:id="@+id/AssignPoints_ButtonCancel" android:layout_height="42dp" android:layout_margin="10dp" android:layout_width="fill_parent" style="@style/PhraseCrazeButton" android:layout_gravity="center" android:text="@string/assignpoints_buttoncancel" android:soundEffectsEnabled="false"></com.siramix.phrasecraze.AntonButton>
		<com.siramix.phrasecraze.AntonButton android:layout_weight="1" android:id="@+id/AssignPoints_ButtonConfirm" android:layout_height="42dp" style="@style/PhraseCrazeButton" android:layout_gravity="center" android:text="@string/assignpoints_buttonconfirm" android:soundEffectsEnabled="false" android:layout_width="fill_parent" android:layout_margin="10dp"></com.siramix.phrasecraze.AntonButton>
	</LinearLayout>
	
</LinearLayout>
